# finance-ai

./: ai_agents.py  auth.py  auth_db.py  crypto_finance.py  data_processing.py  db_manager.py  db_models.py  fetch_agents.py  finance_quiz.py  finance_rag_agent.py  finance_rag_ui.py  pyproject.toml  quant_finance.py  quantitative_finance.py  replit.nix  utils.py  vector_processing.py  visualization.py
attached_assets/: Pasted--home-runner-workspace-pythonlibs-lib-python3-11-site-packages-streamlit-runtime-sc-riptrunner-1743286647900.txt  Pasted--home-runner-workspace-pythonlibs-lib-python3-11-site-packages-streamlit-runtime-sc-riptrunner-1743286783536.txt  Pasted--script-document-addEventListener-DOMContentLoaded-function-Create-cursor-element--1743285339859.txt  Pasted-AI-Augmented-Personal-Finance-Management-using-Fetch-AI-and-Pathway-s-Vector-Store-for-Real-Time-Ins-1743257974345.txt  Pasted-Building-a-Next-Gen-Real-Time-Personal-Finance-Tracking-Web-App-This-web-app-will-be-an-advanced-AI-1743236202017.txt
user_data/: users.json
user_data/020824cd85f72225d4b3548d1307816d/: budgets.json  crypto_holdings.json
